fix(layouts) hide overflow only in map view

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@
 
 html {
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 ol,
